src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_max_items.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": [
        "a",
        "b",
        "c",
        "d"
      ],
      "constraints": [
        {
          "type": "max-items",
          "value": 3
        }
      ],
      "expected_type": "array",
      "field_path": "categories",
      "message": "Array has 4 items but maximum is 3",
      "parameter": "categories",
      "type": "constraint-violation"
    }
  ]
}
