src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_max_properties.snap
---
source: src/error.rs
expression: serialized
---
{
  "actual_value": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "constraints": {
    "max_properties": 2
  },
  "expected_type": "object",
  "field_path": "config",
  "message": "Object has 3 properties but maximum is 2",
  "type": "validation-error"
}
