src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_min_properties.snap
---
source: src/error.rs
expression: serialized
---
{
  "actual_value": {
    "name": "test",
    "version": "1.0"
  },
  "constraints": {
    "min_properties": 3
  },
  "expected_type": "object",
  "field_path": "metadata",
  "message": "Object has 2 properties but minimum is 3",
  "type": "validation-error"
}
