src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_multiple_of.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": 10.5,
      "constraints": [
        {
          "type": "multiple-of",
          "value": 3.0
        }
      ],
      "expected_type": "number",
      "field_path": "price",
      "message": "10.5 is not a multiple of 3",
      "parameter": "price",
      "type": "constraint-violation"
    }
  ]
}
