src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_unique_items.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": [
        1,
        2,
        2,
        3
      ],
      "constraints": [
        {
          "type": "unique-items"
        }
      ],
      "expected_type": "array",
      "field_path": "numbers",
      "message": "Array items [1, 2, 2, 3] are not unique",
      "parameter": "numbers",
      "type": "constraint-violation"
    }
  ]
}
